# smart-generation-code

./: .gitignore  README.md  main.py  pyproject.toml  run_main.ps1
cpp/: focas_connect_demo.cpp
cpp/focas_bridge/: focas_bridge.cpp
examples/: knowledge.json
rag_indexes/focas/: chunks.sample.jsonl  manual_chunks.sample.jsonl  rule_extraction_prompt.md  scenario_taxonomy.json
scripts/: build_focas_cpp_bridge.ps1  calibrate_ncguide_ui.py  click_ncguide_cycle_start.py  inspect_windows.py
smart_traffic_agent/: __init__.py  cli.py  knowledge.py  llm.py  memory.py  models.py  quality.py  tools.py  utils.py  workflow.py
smart_traffic_agent/agent_tools/: __init__.py  base.py  cpp_execution.py
smart_traffic_agent/agents/: __init__.py  annotator.py  code_generator.py  executor.py  planner.py  prompts.py  router.py
smart_traffic_agent/integrations/: focas_bridge.py  ncguide.py  simulator_client.py
smart_traffic_agent/rag/: __init__.py  build_rag_index.py  candidate_filter.py  fanuc_manual_loader.py  focas_loader.py  protocol_document_loader.py  rule_extractor.py  scenario_clusterer.py  scenario_organizer.py  (+2 more)
tests/: test_candidate_filter.py  test_code_generator.py  test_execution_tools.py  test_executor_knowledge.py  test_fanuc_manual_loader.py  test_focas_loader.py  test_llm.py  test_memory.py  test_ncguide.py  test_planner.py  test_protocol_document_loader.py  test_quality.py  test_router.py  test_rule_extractor.py  test_scenario_clusterer.py  test_scenario_organizer.py  test_scenario_taxonomy.py  test_scenario_templates.py  test_tools.py  test_workflow.py
